# route-rs

./: .gitignore  .gitmodules  .travis.yml  404.html  Cargo.toml  LICENSE  README.md  deny.toml  index.html  index.json  index.xml  init.sh  init_dev.sh  logo.sketch  publish_to_ghpages.sh  sitemap.xml
.githooks/: pre-commit  pre-push
afpacket/: Cargo.toml
afpacket/src/: lib.rs  linux.rs  sockets.rs  tokio_sockets.rs
afpacket/tests/: afpacket_tests.rs  afpacket_tokio_tests.rs
basics/: index.html  index.xml
basics/a-content/: index.html  index.xml
basics/a-content/a-first/: index.html
basics/a-content/a-second/: index.html
basics/b-content/: index.html  index.xml
basics/b-content/b-first/: index.html
basics/b-content/b-second/: index.html
basics/second-content/: index.html  index.xml
categories/: index.html  index.xml
credits/: index.html
css/: theme-mine.css
daq-sys/: Cargo.toml  build.rs
daq-sys/src/: wrapper.h
daquiris/: Cargo.toml
daquiris/src/: context.rs  lib.rs  module.rs  static_modules.rs  version.rs
docs/: config.toml
docs/content/: _index.md  credits.md
docs/content/basics/: _index.md  first-content.md
docs/layouts/partials/: logo.html  menu-footer.html
docs/static/css/: theme-mine.css
examples/daquiris-packet-counter/: Cargo.toml
examples/daquiris-packet-counter/src/: main.rs
examples/dns-interceptor/: Cargo.toml
examples/dns-interceptor/src/: elements.rs  main.rs  (+4 more)
examples/local-dns-nat/: Cargo.toml
examples/local-dns-nat/src/: interface.rs  main.rs  pipeline.rs
examples/minimal-static-router/: Cargo.toml
examples/minimal-static-router/src/: classifiers.rs  main.rs  processors.rs
examples/minimum-viable-router/: Cargo.toml
examples/minimum-viable-router/src/: main.rs  route.rs
examples/minimum-viable-router/src/classifier/: interface.rs  mod.rs  protocol.rs
examples/minimum-viable-router/src/processor/: mod.rs  tag_interface.rs
examples/pi-home-router/: Cargo.toml
examples/pi-home-router/src/: main.rs  router.rs  types.rs
examples/pi-home-router/src/arp/: arp_frame.rs  arp_generator.rs  arp_handler.rs  arp_table.rs  arp_utils.rs  mod.rs
examples/pi-home-router/src/classifier/: ethertype.rs  interface.rs  mod.rs
examples/pi-home-router/src/interface/: mod.rs
examples/pi-home-router/src/interface/classifier/: ethertype.rs  inbound_interface.rs  mod.rs  outbound_interface.rs
examples/pi-home-router/src/interface/link/: interface_collect.rs  interface_dispatch.rs  mod.rs  router_exhaust.rs  router_intake.rs
examples/pi-home-router/src/interface/processor/: annotation_decap.rs  annotation_encap.rs  annotation_set_inbound.rs  annotation_set_outbound.rs  ethernetframe_to_vec.rs  mod.rs  vec_to_ethernetframe.rs
examples/pi-home-router/src/ipv4/: classify_dest_subnet.rs  classify_src_subnet.rs  handle_ipv4.graphgen.xml  handle_ipv4.rs  mod.rs
examples/pi-home-router/src/link/: mod.rs
examples/pi-home-router/src/link/interface/: interface_collect.rs  interface_dispatch.rs  mod.rs  router_exhaust.rs  router_intake.rs
examples/pi-home-router/src/mux/: interface_demux.rs  interface_mux.rs  mod.rs
examples/pi-home-router/src/processor/: interface.rs
examples/trivial-identity/: Cargo.toml
netif/: Cargo.toml
netif/src/: lib.rs  memory.rs  packet.rs
route-rs-afpacket/: Cargo.toml
route-rs-afpacket/src/: input.rs  lib.rs  output.rs
route-rs-afpacket/tests/: integration_test.rs
route-rs-graphgen/: Cargo.toml
route-rs-graphgen/src/: codegen.rs  fs.rs  generate.rs  graph.rs  main.rs  pipeline_graph.rs
route-rs-graphgen/src/ast/: magic.rs  mod.rs  struct.rs  token.rs  values.rs
route-rs-graphgen/tests/: test_helper.rs  tests.rs
route-rs-packets/: Cargo.toml
route-rs-packets/src/: arp.rs  ethernet.rs  ipv4.rs  ipv6.rs  lib.rs  tcp.rs  types.rs  udp.rs
route-rs-runtime/: Cargo.toml
route-rs-runtime/src/: lib.rs
route-rs-runtime/src/api/: classify_element.rs  join_element.rs
route-rs-runtime/src/classifier/: even.rs  fizz_buzz.rs  mod.rs
route-rs-runtime/src/composite/: m_transform_n_composite.rs  mod.rs  mton_composite.rs
route-rs-runtime/src/element/: base_element.rs  classifier.rs  dec_ip_hop.rs  drop_element.rs  identity_elements.rs  lan_rewriter.rs  mod.rs  transform_elements.rs
route-rs-runtime/src/element/utils/: icmp.rs  mod.rs
route-rs-runtime/src/io/: mod.rs  pcap.rs
route-rs-runtime/src/link/: async_link.rs  blackhole_link.rs  classify_link.rs  clone_link.rs  drop_link.rs  fork_link.rs  join_link.rs  mod.rs  process_link.rs  queue_link.rs  sync_link.rs  task_park.rs  tee_link.rs
route-rs-runtime/src/link/composite/: drop_link.rs  m_transform_n_composite.rs  m_transform_n_link.rs  mod.rs  mton_composite.rs  mton_link.rs
route-rs-runtime/src/link/primitive/: black_hole_link.rs  classify_link.rs  drop_link.rs  fork_link.rs  input_channel_link.rs  join_link.rs  mod.rs  output_channel_link.rs  pcap.rs  process_link.rs  queue_link.rs
route-rs-runtime/src/link/utils/: mod.rs  task_park.rs
route-rs-runtime/src/packet/: ethernet.rs  ipv4.rs  ipv6.rs  mod.rs  packet.rs  tcp.rs  tuple.rs  types.rs  udp.rs
route-rs-runtime/src/pipeline/: input_channel_link.rs  mod.rs  output_channel_link.rs  runner.rs
route-rs-runtime/src/processor/: dec_ip_hop.rs  drop.rs  file_log.rs  identity.rs  log.rs  mod.rs  trace.rs  transform_from.rs
route-rs-runtime/src/state/: mod.rs  nat_table.rs
route-rs-runtime/src/utils/: mod.rs  runner.rs
route-rs-runtime/src/utils/test/: harness.rs  identity_elements.rs  mod.rs  packet_collectors.rs  packet_generators.rs
route-rs-runtime/src/utils/test/fixture/: test_icmp_8888.pcapng
src/: lib.rs
src/api/: async_element.rs  classify_element.rs  element.rs  join_element.rs  mod.rs
src/utils/: mod.rs
tags/: index.html  index.xml
(+17 files in other folders)
