[workspace]
members = [
    # API Crates
    # These crates can actually be used by other people and might be published to crates.io
    "route-rs-graphgen",
    "route-rs-runtime",

    # Example crates
    # These crates show usage of route-rs features and should _not_ be published to crates.io
    "examples/trivial-identity",
]