[package]
name = "afpacket"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
futures = "0.3"
tokio = { version = "0.2", optional = true, features = ["io-driver", "io-util"] }
mio = { version = "0.6", optional = true }

[dev-dependencies]
route-rs-packets = { path = "../route-rs-packets" }
tokio = { version = "0.2", features = ["io-driver", "rt-core", "sync", "time"] }
rand = "0.7.0"

[features]
default = []

tokio-support = ["tokio", "mio"]
