[package]
name = "afpacket"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"

[dev-dependencies]
route-rs-packets = { path = "../route-rs-packets" }
rand = "0.7.0"
