[package]
name = "daq-sys"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51.0"
cmake = "0.1.41"
pkg-config = "0.3.15"

[features]
pcap = []
afpacket = []
