[package]
name = "daquiris"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daq-sys = { path = "../daq-sys" }
libc = "0.2.62"
failure = "0.1.5"

[features]
pcap = ["daq-sys/pcap"]
afpacket = ["daq-sys/afpacket"]
