[package]
name = "route-rs-graphgen"
version = "0.1.0"
authors = ["Sam Gruber <sam@scgruber.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33.0"
xml-rs = "0.8.0"
petgraph = "0.4.13"
proc-macro2 = "1.0.6"
quote = "1.0.2"
regex = "1.0.0"

[dependencies.syn]
version = "1.0.7"
features = ["full", "parsing"]
