[package]
name = "route-rs-runtime"
version = "0.1.0"
authors = ["Collin Valley <collin.valley@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
crossbeam = "0.7.2"
rand = "0.7.2"
route-rs-packets = { path = "../route-rs-packets" }