[package]
name = "daquiris-packet-counter"
version = "0.1.0"
authors = ["Nathan Moos <moosingin3space@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daquiris = { path = "../../daquiris", features = [ "afpacket" ] }
