[package]
name = "minimal-static-router"
version = "0.1.0"
authors = ["Collin Valley <collin.valley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-rs-runtime = { path = "../../route-rs-runtime" }
route-rs-packets = { path = "../../route-rs-packets" }
tokio = "0.1.22"
futures = "0.1.29"
crossbeam = "0.7.2"