[package]
name = "minimum-viable-router"
version = "0.1.0"
authors = ["Sam Gruber <sam@scgruber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-rs-runtime = { path = "../../route-rs-runtime" }
route-rs-packets = { path = "../../route-rs-packets" }
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7.2"
