[package]
name = "pi-home-router"
version = "0.1.0"
authors = ["Collin Valley <collin.valley@gmail.com>", "Sam Gruber <sam@scgruber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-rs-runtime = { path = "../../route-rs-runtime" }
route-rs-packets = { path = "../../route-rs-packets" }
afpacket = { path = "../../afpacket" }
tokio = {version = "0.2", features = ["full"] }
futures = "0.3"
crossbeam = "0.7.2"
clap = "2.33"
